--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1034,6 +1034,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
+.bg-green-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 101 52 / var(--tw-bg-opacity));
+}
 .fill-current {
   fill: currentColor;
 }
