--- a/public/css/app.css
+++ b/public/css/app.css
@@ -651,6 +651,9 @@ select {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.static {
+  position: static;
+}
 .fixed {
   position: fixed;
 }
@@ -681,6 +684,9 @@ select {
 .z-50 {
   z-index: 50;
 }
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
@@ -693,17 +699,12 @@ select {
   margin-top: auto;
   margin-bottom: auto;
 }
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
 .-ml-px {
   margin-left: -1px;
-}
-.-mr-0 {
-  margin-right: -0px;
-}
-.-mr-0\.5 {
-  margin-right: -0.125rem;
-}
-.-mr-2 {
-  margin-right: -0.5rem;
 }
 .-mt-px {
   margin-top: -1px;
@@ -750,6 +751,9 @@ select {
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
 .block {
   display: block;
 }
@@ -777,38 +781,41 @@ select {
 .h-20 {
   height: 5rem;
 }
-.h-4 {
-  height: 1rem;
-}
 .h-5 {
   height: 1.25rem;
-}
-.h-6 {
-  height: 1.5rem;
 }
 .h-8 {
   height: 2rem;
 }
-.h-9 {
-  height: 2.25rem;
-}
 .h-\[100\%\] {
   height: 100%;
+}
+.h-screen {
+  height: 100vh;
+}
+.h-\[\] {
+  height: ;
+}
+.h-\[100vh\] {
+  height: 100vh;
+}
+.h-\[80vh\] {
+  height: 80vh;
+}
+.h-\[90vh\] {
+  height: 90vh;
 }
 .min-h-screen {
   min-height: 100vh;
 }
-.w-4 {
-  width: 1rem;
+.w-20 {
+  width: 5rem;
 }
 .w-48 {
   width: 12rem;
 }
 .w-5 {
   width: 1.25rem;
-}
-.w-6 {
-  width: 1.5rem;
 }
 .w-60 {
   width: 15rem;
@@ -828,6 +835,54 @@ select {
 .w-full {
   width: 100%;
 }
+.w-\[\] {
+  width: ;
+}
+.w-\[25em\] {
+  width: 25em;
+}
+.w-\[20em\] {
+  width: 20em;
+}
+.w-\[10em\] {
+  width: 10em;
+}
+.w-\[15em\] {
+  width: 15em;
+}
+.w-\[50\] {
+  width: 50;
+}
+.w-\[50em\] {
+  width: 50em;
+}
+.w-\[60em\] {
+  width: 60em;
+}
+.w-2 {
+  width: 0.5rem;
+}
+.w-24 {
+  width: 6rem;
+}
+.w-\[25px\] {
+  width: 25px;
+}
+.w-\[px\] {
+  width: px;
+}
+.w-\[35px\] {
+  width: 35px;
+}
+.w-\[40px\] {
+  width: 40px;
+}
+.w-\[45px\] {
+  width: 45px;
+}
+.w-0 {
+  width: 0px;
+}
 .min-w-full {
   min-width: 100%;
 }
@@ -840,11 +895,14 @@ select {
 .max-w-xl {
   max-width: 36rem;
 }
+.max-w-full {
+  max-width: 100%;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
-.shrink-0 {
-  flex-shrink: 0;
+.flex-none {
+  flex: none;
 }
 .border-spacing-3 {
   --tw-border-spacing-x: 0.75rem;
@@ -859,6 +917,10 @@ select {
 }
 .origin-top-right {
   transform-origin: top right;
+}
+.translate-y-5 {
+  --tw-translate-y: 1.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-100 {
   --tw-scale-x: 1;
@@ -888,8 +950,51 @@ select {
 .list-disc {
   list-style-type: disc;
 }
+.columns-3xs {
+  -moz-columns: 16rem;
+       columns: 16rem;
+}
+.columns-8 {
+  -moz-columns: 8;
+       columns: 8;
+}
+.columns-4 {
+  -moz-columns: 4;
+       columns: 4;
+}
+.columns-6 {
+  -moz-columns: 6;
+       columns: 6;
+}
+.columns-3 {
+  -moz-columns: 3;
+       columns: 3;
+}
+.columns-12 {
+  -moz-columns: 12;
+       columns: 12;
+}
+.columns-\[5em\] {
+  -moz-columns: 5em;
+       columns: 5em;
+}
+.columns-\[55em\] {
+  -moz-columns: 55em;
+       columns: 55em;
+}
+.columns-\[10em\] {
+  -moz-columns: 10em;
+       columns: 10em;
+}
+.columns-\[15em\] {
+  -moz-columns: 15em;
+       columns: 15em;
+}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-row {
+  flex-direction: row;
 }
 .flex-col {
   flex-direction: column;
@@ -921,10 +1026,11 @@ select {
 .gap-4 {
   gap: 1rem;
 }
-.space-x-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+.gap-1 {
+  gap: 0.25rem;
+}
+.gap-1\.5 {
+  gap: 0.375rem;
 }
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -937,8 +1043,14 @@ select {
 .overflow-y-hidden {
   overflow-y: hidden;
 }
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-full {
+  border-radius: 9999px;
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -965,6 +1077,9 @@ select {
 }
 .border-b-2 {
   border-bottom-width: 2px;
+}
+.border-b-4 {
+  border-bottom-width: 4px;
 }
 .border-l-4 {
   border-left-width: 4px;
@@ -1053,12 +1168,30 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-slate-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+.bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+}
 .fill-current {
   fill: currentColor;
+}
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.p-0 {
+  padding: 0px;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .p-2 {
   padding: 0.5rem;
@@ -1076,10 +1209,6 @@ select {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1182,9 +1311,6 @@ select {
 .capitalize {
   text-transform: capitalize;
 }
-.leading-4 {
-  line-height: 1rem;
-}
 .leading-5 {
   line-height: 1.25rem;
 }
@@ -1265,6 +1391,10 @@ select {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-green-800 {
+  --tw-text-opacity: 1;
+  color: rgb(22 101 52 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -1443,10 +1573,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(224 231 255 / var(--tw-bg-opacity));
 }
-.focus\:text-gray-500:focus {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
 .focus\:text-gray-700:focus {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1521,21 +1647,8 @@ select {
 }
 @media (min-width: 640px) {
 
-  .sm\:-my-px {
-    margin-top: -1px;
-    margin-bottom: -1px;
-  }
-
   .sm\:ml-0 {
     margin-left: 0px;
-  }
-
-  .sm\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
-  .sm\:ml-6 {
-    margin-left: 1.5rem;
   }
 
   .sm\:block {
